<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.jmarzin.jmlangues.ThemesActivity">
    <item android:id="@+id/action_themes" android:title="@string/action_themes"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_mots" android:title="@string/action_mots"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_verbes" android:title="@string/action_verbes"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_formes_types" android:title="@string/action_formes_types"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_formes" android:title="@string/action_formes"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_revision" android:title="@string/action_revision"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_statistiques" android:title="@string/action_statistiques"
          android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_parametrage" android:title="@string/action_parametrage"
          android:orderInCategory="100" app:showAsAction="never" />
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="@string/action_search"
            android:visible="false"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="ifRoom|collapseActionView" />
</menu>
