<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="wrap_content">
    <include layout="@layout/toolbar"/>
    <com.jjoe64.graphview.GraphView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:id="@+id/graph" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="32dp"
        android:paddingEnd="25dp"
        android:divider="@android:drawable/divider_horizontal_dark"
        android:paddingTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/t_date"
            android:gravity="center_vertical|start"
            android:layout_weight="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/t_nbQuestionsMots"
            android:layout_weight="1"
            android:gravity="center_vertical|end" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/t_nbErreursMots"
            android:layout_weight="1"
            android:gravity="center_vertical|end" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/t_nbQuestionsFormes"
            android:layout_weight="1"
            android:gravity="center_vertical|end" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/t_nbErreursFormes"
            android:layout_weight="1"
            android:gravity="center_vertical|end" />

    </LinearLayout>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:fastScrollAlwaysVisible="true"
        android:fastScrollEnabled="true" />

</LinearLayout>
