<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:divider="@drawable/divider"
        android:focusable="false"
        android:orientation="vertical"
        android:showDividers="middle">

    <TextView
            android:id="@+id/t_langue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elegantTextHeight="false"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/titre_langue"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="@dimen/abc_text_size_title_material"
            android:textStyle="bold"
            tools:ignore="PrivateResource"
            tools:targetApi="lollipop" />

    <!--android:paddingTop="@dimen/abc_action_bar_default_padding_material"-->

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        <ImageButton
                android:id="@+id/im_italien"
                android:layout_width="@dimen/taille_drap"
                android:layout_height="@dimen/taille_drap"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_span="1"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:background="#00ffffff"
                android:baselineAlignBottom="false"
                android:clickable="true"
                android:contentDescription="@string/Italien"
                android:cropToPadding="false"
                android:nestedScrollingEnabled="true"
                android:onClick="clickDrapeauItalien"
                android:scaleType="centerInside"
                android:src="@drawable/italien"
                android:focusable="true"
                tools:targetApi="lollipop" />

        <ImageButton
                android:id="@+id/im_anglais"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/taille_drap"
                android:layout_column="2"
                android:layout_gravity="center_horizontal"
                android:layout_span="1"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:clickable="true"
                android:contentDescription="@string/Anglais"
                android:cropToPadding="false"
                android:onClick="clickDrapeauAnglais"
                android:scaleType="centerInside"
                android:src="@drawable/anglais"
                android:focusable="true" />

        <ImageButton
                android:id="@+id/im_espagnol"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/taille_drap"
                android:layout_column="3"
                android:layout_gravity="center_horizontal"
                android:layout_span="1"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:clickable="true"
                android:contentDescription="@string/Espagnol"
                android:onClick="clickDrapeauEspagnol"
                android:scaleType="centerInside"
                android:src="@drawable/espagnol"
                android:focusable="true" />

        <ImageButton
                android:id="@+id/im_portugais"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/taille_drap"
                android:layout_column="3"
                android:layout_gravity="center_horizontal"
                android:layout_span="1"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:clickable="true"
                android:contentDescription="@string/Portugais"
                android:onClick="clickDrapeauPortugais"
                android:scaleType="centerInside"
                android:src="@drawable/portugais"
                android:focusable="true" />

        <ImageButton
                android:id="@+id/im_occitan"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/taille_drap"
                android:layout_column="3"
                android:layout_gravity="left"
                android:layout_span="1"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:clickable="true"
                android:contentDescription="@string/Occitan"
                android:onClick="clickDrapeauOccitan"
                android:scaleType="centerInside"
                android:src="@drawable/occitan"
                android:focusable="true" />

        <ImageButton
                android:id="@+id/im_lingvo"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/taille_drap"
                android:layout_column="3"
                android:layout_gravity="left"
                android:layout_span="1"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:clickable="true"
                android:contentDescription="@string/Lingvo"
                android:onClick="clickDrapeauLingvo"
                android:scaleType="centerInside"
                android:src="@drawable/lingvo"
                android:focusable="true" />

        <ImageButton
                android:id="@+id/im_allemand"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/taille_drap"
                android:layout_column="3"
                android:layout_gravity="left"
                android:layout_span="1"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#00ffffff"
                android:clickable="true"
                android:contentDescription="@string/Allemand"
                android:onClick="clickDrapeauAllemand"
                android:scaleType="centerInside"
                android:src="@drawable/allemand"
                android:focusable="true" />

        <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:dividerPadding="20dp"
            android:focusable="false"
            android:orientation="vertical"
            android:showDividers="middle|end">

        <Button
                android:id="@+id/b_themes"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:onClick="clickThemes"
                android:paddingStart="@dimen/taille_drap"
                android:text="@string/themes"
                android:textColor="#fe000000" />

        <Button
                android:id="@+id/b_mots"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:onClick="clickMots"
                android:paddingStart="@dimen/taille_drap"
                android:text="@string/mots"
                android:textColor="#fe000000" />

        <Button
                android:id="@+id/b_verbes"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:onClick="clickVerbes"
                android:paddingStart="@dimen/taille_drap"
                android:text="@string/verbes"
                android:textColor="#fe000000" />

        <Button
                android:id="@+id/b_formes_types"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:onClick="clickFormesTypes"
                android:paddingStart="@dimen/taille_drap"
                android:text="@string/formes_types"
                android:textColor="#fe000000" />

        <Button
                android:id="@+id/b_formes"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:onClick="clickFormes"
                android:paddingStart="@dimen/taille_drap"
                android:text="@string/formes"
                android:textColor="#fe000000" />

        <Button
                android:id="@+id/b_revision"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:onClick="clickRevision"
                android:paddingStart="@dimen/taille_drap"
                android:text="@string/revision"
                android:textColor="#fe000000"
                android:visibility="visible" />

        <Button
                android:id="@+id/b_statistiques"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:onClick="clickStatistiques"
                android:paddingStart="@dimen/taille_drap"
                android:singleLine="true"
                android:text="@string/statistiques"
                android:textColor="#fe000000" />

        <Button
                android:id="@+id/b_parametrage"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:onClick="clickParametrage"
                android:paddingStart="@dimen/taille_drap"
                android:singleLine="true"
                android:text="@string/parametrage"
                android:textColor="#fe000000" />

        <Button
                android:id="@+id/b_quitter"
                style="@android:style/Widget.DeviceDefault.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|left"
                android:onClick="clickQuitter"
                android:paddingStart="@dimen/taille_drap"
                android:singleLine="true"
                android:text="@string/quitter"
                android:textColor="#fe000000" />

    </LinearLayout>

</LinearLayout>